infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
  namespace: microservices-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: joshuaombasa/client
          ports:
            - containerPort: 80  # Expose port 80 as defined in the Nginx configuration

---

apiVersion: v1
kind: Service
metadata: 
  name: client-srv
  namespace: microservices-app
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 80  # Use port 80 for the Service
      targetPort: 80  # Target the container's port 80
