infra/k8s/comments-mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-mongodb
  namespace: microservices-app
spec:
  ports:
    - port: 27017
  selector:
    app: comments-mongodb

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-mongodb
  namespace: microservices-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments-mongodb
  template:
    metadata:
      labels:
        app: comments-mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:4.4
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: comments-mongodb-storage
      volumes:
        - name: comments-mongodb-storage
          persistentVolumeClaim:
            claimName: comments-mongodb-pvc
