infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: event-bus-depl
  namespace: microservices-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: joshuaombasa/event-bus

---

apiVersion: v1
kind: Service
metadata: 
  name: event-bus-srv
  namespace: microservices-app
spec:
  type: NodePort
  selector: 
    app: event-bus
  ports: 
    - name: event-bus
      protocol: TCP
      port: 4010
      targetPort: 4010



apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  type: ClusterIP
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4010
      targetPort: 4010
