infra/k8s/event-bus-nodeport-srv.yaml
apiVersion: v1
kind: Service
metadata: 
  name: eventbus-nodeport-srv
  namespace: microservices-app
spec:
  type: NodePort
  selector: 
    app: event-bus
  ports: 
    - name: event-bus
      protocol: TCP
      port: 4010
      targetPort: 4010
