infra/k8s/moderation-mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: moderation-mongodb
  namespace: microservices-app
spec:
  ports:
    - port: 27017
  selector:
    app: moderation-mongodb

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-mongodb
  namespace: microservices-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation-mongodb
  template:
    metadata:
      labels:
        app: moderation-mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:4.4
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: moderation-mongodb-storage
      volumes:
        - name: moderation-mongodb-storage
          persistentVolumeClaim:
            claimName: moderation-mongodb-pvc
