infra/k8s/stories-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: stories-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: stories
  template:
    metadata:
      labels:
        app: stories
    spec:
      containers:
        - name: stories
          image: joshuaombasa/stories


---

apiVersion: v1
kind: Service
metadata:
  name: stories-clusterip-srv
spec:
  selector:
    app: stories
  ports:
    - name: stories
      protocol: TCP
      port: 4006
      targetPort: 4006
