infra/k8s/stories-srv.yaml
# apiVersion: v1
# kind: Service
# metadata: 
#   name: stories-srv
# spec:
#   type: NodePort
#   selector: 
#     app: stories
#   ports: 
#     - name: stories
#       protocol: TCP
#       port: 4006
#       targetPort: 4006

apiVersion: v1
kind: Service
metadata: 
  name: stories-srv
spec:
  type: NodePort
  selector: 
    app: stories
  ports: 
    - name: stories
      protocol: TCP
      port: 4006
      targetPort: 4006
